--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/fav.png" type="image/x-icon">
+<meta name="description" content="Play the classic Snake game optimized for mobile devices. Enjoy smooth controls, responsive design, and addictive gameplay on any screen size.">
+<meta name="keywords" content="Snake game, mobile game, responsive Snake, classic Snake game, HTML5 game, mobile gaming, retro game, mobile-friendly, online Snake game, free Snake game, mobile responsive, mobile Snake game">
+<meta name="author" content="Muhammad Abdullah">
+<meta name="robots" content="index, follow">
+<meta property="og:title" content="Play Snake Game - Mobile Responsive">
+<meta property="og:description" content="Experience the classic Snake game on your mobile device with a responsive design. Smooth gameplay and easy controls for an enjoyable experience.">
+<meta property="og:type" content="website">
+<meta name="twitter:title" content="Play Snake Game - Mobile Responsive">
+<meta name="twitter:description" content="Enjoy the classic Snake game optimized for your mobile device. Responsive design and smooth controls for all screen sizes.">
     <title>Snake Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
